# ZeroNP

./: CMakeLists.txt  README.md  ZeroLNP_installation.md
Old Matlab Version/: subnp.m  zeronp.m
ZeroNP User Guide/: index.html
include/: def_zeronp_lapack.h  der_info.h  linalg.h  linsys.h  qp_solver.h  rescue.h  subnp.h  zeronp.h  zeronp_glbopts.h  zeronp_util.h
interface/C/: CMakeLists.txt  P78_example.c  P93_example.c  demo.c  rosenbrock_example.c
interface/Julia/ZeroNP/: Project.toml
interface/Julia/ZeroNP/src/: ZeroNP.jl
interface/Julia/ZeroNP/src/utilities/: SOLNP_CONST.jl  solnp.jl
interface/Julia/ZeroNP/test/: Manifest.toml  Project.toml  test.jl
interface/Matlab/: make_zeronp.m
interface/Matlab/test/Circle/: circle_ineq.m  circle_ineq_pdfo.m  cost.m
interface/Matlab/test/Cutest/BEALENE/: BEALENE.m  BEALENE_pdfo.m  cost.m
interface/Matlab/test/Cutest/BROWNBSNE/: BROWNBSNE.m  cost.m
interface/Matlab/test/Cutest/BT1/: BT1.m  cost.m
interface/Matlab/test/Cutest/BT3/: BT3.m  cost.m
interface/Matlab/test/Cutest/BT9/: BT9.m  cost.m
interface/Matlab/test/Cutest/BYRDSPHR/: BYRDSPHR.m  cost.m
interface/Matlab/test/Cutest/COOLHANS/: COOLHANS.m  cost.m  (+1 more)
interface/Matlab/test/HS_noise/: solnp_tesths.m
interface/Matlab/test/HS_withoutnoise/: solnp_tesths.m
interface/Matlab/test/OLS/: OLS.m  cost.m
interface/Matlab/test/Pharmacodynamics for Tumor Growth/: NOMAD_Tumor.m  SOLNP_tumor.m  cost.m  pdfo_tumor.m  plot_subroutine.m
interface/Matlab/test/Rosenbrock/: Rb_pdfo.m  Rosenbrock.m
interface/Python/: pyzeronp.py  setup.py
interface/Python/test/: test.py
source/: Rescue.c  der_info.c  linalg.c  linsys.c  qp_solver.c  subnp_qp.c  zeronp.c  zeronp_c_interface.c  zeronp_mex.c  zeronp_py.c  zeronp_util.c
(+110 files in other folders)
